prod/accounting_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounting
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accounting
  template:
    metadata:
      labels:
        app: accounting
    spec:
      containers:
        - name: accounting
          image: registry.gitlab.au.dk/au685087/wao_group_19_examinrepo/accounting:0.0.0
          ports:
            - containerPort: 50053
          resources:
            limits:
              cpu: "0.5"
              memory: "500Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
      imagePullSecrets:
        - name: my-registry-credentials
