prod/bank_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank
  namespace: wao-group-19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank
  template:
    metadata:
      labels:
        app: bank
    spec:
      containers:
        - name: bank
          image: registry.gitlab.au.dk/au685087/wao_group_19_examinrepo/bank:1.0.0
          resources:
            limits:
              cpu: "0.6"
              memory: "1.5Gi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
      imagePullSecrets:
        - name: my-registry-credentials
