prod/router_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
  namespace: wao-group-19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router
          image: registry.gitlab.au.dk/au685087/wao_group_19_examinrepo/router:0.1.14
          ports:
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "0.6"
              memory: "1.5Gi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
      imagePullSecrets:
        - name: my-registry-credentials
