prod/web-app_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: registry.gitlab.au.dk/au685087/wao_group_19_examinrepo/web-app:1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.6"
              memory: "1.5Gi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
      imagePullSecrets:
        - name: my-registry-credentials
