prod/accounting_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: accounting
  namespace: wao-group-19
spec:
  selector:
    app: accounting
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
