prod/analytics_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: wao-group-19
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 5081
      targetPort: 5081
