prod/mongo_Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: wao-group-19
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
