prod/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: wao-group-19
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.13-management
        ports:
        - containerPort: 15672
        - containerPort: 5672
        resources:
          limits:
            cpu: "0.3"
            memory: "0.75Gi"
          requests:
            cpu: "0.1"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: wao-group-19
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15672
      name: management
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: amqp
