prod/router_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: wao-group-19
spec:
  selector:
    app: router
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
