prod/todo_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: wao-group-19
spec:
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
