prod/web-app_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: wao-group-19
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
