prod/ingress_webapp_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: wao-group-19
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: swwao.courses.orbit.au.dk
      http:
        paths:
        - path: /grp-19/web-app/
          pathType: Prefix
          backend:
            service:
              name: web-app-service
              port:
                number: 3000

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webapp-ingress
#   namespace: wao-group-19
#   annotations:
#     nginx.ingress.kubernetes.io/use-regex: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: swwao.courses.orbit.au.dk
#       http:
#         paths:
#           - path: /grp-19/web-app
#             pathType: Prefix
#             backend:
#               service:
#                 name: web-app-service
#                 port:
#                   number: 80
#           - path: /grp-19/router
#             pathType: Prefix
#             backend:
#               service:
#                 name: router-service
#                 port:
#                   number: 4000
